# LGAC-Virtual-Assistant

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  DEPLOYMENT_PLAN.md  Dockerfile  README.md  TRANSITION_PLAN.md  docker-compose.yml  pyproject.toml  rebuild.sh
docs/: index.html
scripts/: ingest_docs.py
src/lgac_assistant/: __init__.py  __main__.py  app.py  config.py  feedback.py  ingest.py  models.py  prompts.py  rag.py  sessions.py  vectorstore.py
static/: admin.html  app.js  index.html  style.css
tests/: conftest.py  test_app.py  test_config.py  test_feedback.py  test_ingest.py  test_rag.py  test_sessions.py  test_vectorstore.py
